# minidb

./: CHANGELOG.md  CMakeLists.txt  README.md  index_impl.txt  test.txt
doc/: index.txt  table.txt  test.txt
src/: block_handle.h  block_info.h  buffer_manager.cc  buffer_manager.h  catalog_manager.cc  catalog_manager.h  file_handle.cc  file_handle.h  file_info.h  index_manager.cc  index_manager.h  interpreter.cc  interpreter.h  main.cc  minidb_api.cc  minidb_api.h  record_manager.cc  record_manager.h  sql_statement.cc  sql_statement.h
